--- a/vooie-alexa/alexa-sample/package.json
+++ b/vooie-alexa/alexa-sample/package.json
@@ -4,6 +4,11 @@
   "description": "A sample Alexa appication using vooie-alexa",
   "main": "index.js",
   "scripts": {
+    "precompile": "yarn tsc --build --clean",
+    "compile": "yarn tsc --build",
+    "prestart": "yarn compile",
+    "start": "node dist/index.js",
+    "dev": "node-dev src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Raymond Mauge",
@@ -14,6 +19,8 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
+    "node-dev": "^7.4.3",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
     "yarn": "^1.22.19"
   }
