--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,17 @@ dist
 
 # TernJS port file
 .tern-port
+
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
