--- a/vooie-alexa/alexa-sample/package.json
+++ b/vooie-alexa/alexa-sample/package.json
@@ -14,11 +14,16 @@
   "author": "Raymond Mauge",
   "license": "MIT",
   "dependencies": {
+    "ask-sdk": "^2.12.1",
+    "ask-sdk-express-adapter": "^2.12.1",
+    "ask-sdk-model": "^1.39.0",
     "express": "5.0.0-beta.1"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.109",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
+    "ask-sdk-local-debug": "^1.1.0",
     "node-dev": "^7.4.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
