--- a/vooie-alexa/alexa-sample/tsconfig.json
+++ b/vooie-alexa/alexa-sample/tsconfig.json
@@ -4,7 +4,7 @@
             "es2022"
         ],
         "baseUrl": "src",
-        "outDir": "dist",
+        "outDir": "lambda",
         "sourceMap": true,
         "experimentalDecorators": true,
         "module": "commonjs",
